<resources>
    <string name="web_client_id">996437999035-v5taeqk1fp68b73f3h17fqneulhsf0k6.apps.googleusercontent.com</string>
    <string name="app_name">Mock</string>
    <string name="header">My Quiz Game</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">
        <u>I forgot my password</u>
    </string>
    <string name="sign_up">
        <u>Sign up</u>
    </string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="have_account">Did you have account yet?</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">Finish</string>
    <string name="next_q">Next</string>
    <string name="play_again">Play again</string>
    <string name="exit">Exit</string>
    <string name="timeIsUp">Sorry, time is up! Continue with next question.</string>
</resources>