<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="loginViewModel"
            type="com.antv.mock.viewModel.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical"
        android:backgroundTintMode="screen"
        android:background="@color/white">

        <ImageView
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/quiz_logo"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@drawable/rounder_rectangle"
            android:padding="30dp"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@={loginViewModel.email}"
                    android:hint="@string/prompt_email"
                    android:drawableStart="@drawable/ic_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:passwordToggleEnabled="true"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={loginViewModel.password}"
                    android:textSize="20dp"
                    android:hint="@string/prompt_password"
                    android:drawableStart="@drawable/ic_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{loginViewModel.message}"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="@color/red_700"
                android:visibility="@{loginViewModel.isFailure ? View.VISIBLE : View.GONE}" />

            <Button
                android:layout_width="250dp"
                android:text="@string/sign_in"
                app:cornerRadius="0dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:backgroundTint="@color/light_gray"
                android:layout_height="50dp"
                android:onClick="@{() -> loginViewModel.handleLogin()}"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- View dùng để vẽ đường -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="#000000" />

                <!-- TextView chứa văn bản -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Or"
                    android:textSize="25sp"
                    android:textColor="@color/black" />

                <!-- View dùng để vẽ đường -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <Button
                android:layout_width="250dp"
                app:cornerRadius="0dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:backgroundTint="@color/light_gray"
                android:drawableLeft="@drawable/google"
                android:text="@string/continue_with_google"
                android:layout_height="50dp"
                android:onClick="@{() -> loginViewModel.signInWithGoogle()}"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account"
                    android:textSize="15sp"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:lines="1"
                    android:clickable="true"
                    android:onClick="@{() -> loginViewModel.navigateToSignUp()}"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="center_horizontal"
                android:textStyle="italic"
                android:textSize="16sp"
                android:clickable="true"
                android:onClick="@{() -> loginViewModel.onForgotPasswordClicked()}" />
        </LinearLayout>


    </LinearLayout>
</layout>