<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.antv.mock.viewModel.SignUpViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity"
        android:orientation="vertical"
        android:background="@color/white"
        android:backgroundTintMode="screen"
        android:padding="30dp"
        >

        <ImageView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:src="@drawable/signup"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@={viewModel.email}"
                    android:hint="@string/prompt_email"
                    android:drawableStart="@drawable/ic_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:passwordToggleEnabled="true"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textSize="20dp"
                    android:hint="@string/prompt_password"
                    android:drawableStart="@drawable/ic_password" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:passwordToggleEnabled="true"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.confirmPassword}"
                    android:textSize="20dp"
                    android:hint="@string/confirm_password"
                    android:drawableStart="@drawable/ic_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.message}"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="@{viewModel.isFailure ? View.VISIBLE : View.GONE}" />

            <Button
                android:layout_width="250dp"
                android:text="@string/sign_up"
                app:cornerRadius="0dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:backgroundTint="@color/primary"
                android:layout_height="50dp"
                android:onClick="@{() -> viewModel.handleSignUp()}"
                />



        </LinearLayout>


    </LinearLayout>
</layout>